[gd_scene load_steps=2 format=3 uid="uid://b8tn5q4xc3yfh"]

[ext_resource type="Script" path="res://scenes/career_quest/career_quest_title.gd" id="1"]

[node name="CareerQuestTitle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.18, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "CAREER QUEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Explore Your Future, One Career at a Time"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Adventure"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "How to Play"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "About"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="InstructionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="InstructionsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "How to Play Career Quest"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="InstructionsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InstructionsText" type="RichTextLabel" parent="InstructionsPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[b]Welcome to Career Quest![/b]

[b]Objective:[/b]
Explore different career paths by jumping into mini-worlds that showcase various professions. Each career world offers unique challenges that help you understand what each job involves.

[b]How to Play:[/b]
1. Select a career from the Career Hub
2. Complete skill-based challenges in each career world
3. Experience scenarios that capture what each job is like
4. Earn scores based on your performance
5. Discover multiple outcomes based on your choices

[b]Controls:[/b]
• Mouse Click - Select options and interact
• Arrow Keys/WASD - Navigate (in applicable challenges)
• ESC - Pause/Menu

[b]Careers Available:[/b]
• Software Developer - Code, debug, and solve programming puzzles
• Healthcare Professional - Diagnose patients and provide care
• Teacher/Educator - Create lessons and engage students
• Business Manager - Make strategic decisions and lead teams

Complete all career challenges to discover your path!"
fit_content = true

[node name="CloseButton" type="Button" parent="InstructionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Close"
